--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -68,7 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:padding="8dp"
+                android:padding="10dp"
                 android:nestedScrollingEnabled="false"
                 android:orientation="horizontal"/>
 
@@ -87,8 +87,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:padding="8dp"
-                android:nestedScrollingEnabled="true"/>
+                android:padding="10dp"
+                android:nestedScrollingEnabled="true"
+                />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
