--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#93CCF3"
+    android:background="@color/white"
     android:orientation="vertical">
 
 
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#3395FF"
+        android:background="@color/white"
         android:orientation="horizontal"
         android:gravity="center_vertical">
 
@@ -19,7 +19,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:id="@+id/backtt"
-            android:background="#3395FF"
+            android:background="#D7DADC"
             android:src="@drawable/baseline_arrow_back_24_white"
             />
 
@@ -115,17 +115,10 @@
                 android:background="@color/white"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:layout_width="73dp"
-                    android:layout_height="73dp"
-                    android:src="@drawable/features">
-
-                </ImageView>
                 <LinearLayout
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginLeft="16dp">
+                    android:orientation="vertical">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -174,16 +167,5 @@
         android:backgroundTint="#414F44"
         android:layout_margin="16dp"
         android:textSize="16sp"/>
-<<<<<<< HEAD
-    <Button
-        android:id="@+id/payment_confirm_zalo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Đặt Hàng qua Zalo"
-        android:backgroundTint="#414F44"
-        android:layout_margin="16dp"
-        android:textSize="16sp"/>
-=======
 
->>>>>>> 5fc002c472a9b4cb5f126ad5dfa85d4ab4d14417
 </LinearLayout>
